--- a/JournalApp/Base.lproj/Main.storyboard
+++ b/JournalApp/Base.lproj/Main.storyboard
@@ -1,24 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3Cl-Np-Aj5">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Journals Table View Controller-->
+        <scene sceneID="NwM-gp-bJ6">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="rdz-Im-Oza" customClass="JournalsTableViewController" customModule="JournalApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="yy7-Or-9zJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" rowHeight="208" id="aBw-rI-dyh" customClass="myCell" customModule="JournalApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="208"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aBw-rI-dyh" id="lFF-rp-aHw">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="207.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wMK-Ob-P1G">
+                                            <rect key="frame" x="126" y="76" width="240" height="121"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="121" id="P1E-AY-tYV"/>
+                                            </constraints>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bxr-5F-PCt">
+                                            <rect key="frame" x="123" y="20" width="247" height="48"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3gd-kY-Wnd">
+                                            <rect key="frame" x="9" y="76" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="ngP-yQ-hVO"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="wMK-Ob-P1G" firstAttribute="bottom" secondItem="lFF-rp-aHw" secondAttribute="bottomMargin" id="6Zz-Ub-DvS"/>
+                                        <constraint firstItem="3gd-kY-Wnd" firstAttribute="centerY" secondItem="lFF-rp-aHw" secondAttribute="centerY" constant="22.25" id="Cvv-e8-jqa"/>
+                                        <constraint firstItem="3gd-kY-Wnd" firstAttribute="top" secondItem="lFF-rp-aHw" secondAttribute="topMargin" constant="65" id="ItT-9D-Rgd"/>
+                                        <constraint firstItem="wMK-Ob-P1G" firstAttribute="top" secondItem="bxr-5F-PCt" secondAttribute="bottom" constant="8" symbolic="YES" id="M6x-O2-EDL"/>
+                                        <constraint firstItem="bxr-5F-PCt" firstAttribute="top" secondItem="lFF-rp-aHw" secondAttribute="topMargin" constant="9" id="NH9-Vj-p5r"/>
+                                        <constraint firstItem="3gd-kY-Wnd" firstAttribute="leading" secondItem="lFF-rp-aHw" secondAttribute="leadingMargin" constant="-7" id="O3e-bO-xAr"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="bxr-5F-PCt" secondAttribute="trailing" constant="-11" id="TLR-it-CHE"/>
+                                        <constraint firstItem="bxr-5F-PCt" firstAttribute="centerX" secondItem="wMK-Ob-P1G" secondAttribute="centerX" id="W6R-uY-OHE"/>
+                                        <constraint firstItem="wMK-Ob-P1G" firstAttribute="leading" secondItem="3gd-kY-Wnd" secondAttribute="trailing" constant="17" id="XTC-3U-MNo"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="wMK-Ob-P1G" secondAttribute="trailing" constant="-7" id="xTb-o0-ucu"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="Timage" destination="3gd-kY-Wnd" id="3pC-Ok-enu"/>
+                                    <outlet property="descr" destination="wMK-Ob-P1G" id="gfl-T6-7dv"/>
+                                    <outlet property="name" destination="bxr-5F-PCt" id="dSD-Oi-FEo"/>
+                                    <outlet property="safeView" destination="lFF-rp-aHw" id="YKX-Hu-tCn"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="rdz-Im-Oza" id="NBl-Yf-M0h"/>
+                            <outlet property="delegate" destination="rdz-Im-Oza" id="3qD-gs-G7X"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="mUo-lT-DRy"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BwF-na-fyh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="663.20000000000005" y="23.838080959520241"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="huL-1g-pqf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3Cl-Np-Aj5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="An9-P9-2ME">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="rdz-Im-Oza" kind="relationship" relationship="rootViewController" id="PMi-4h-1Ry"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2o6-Ta-UJy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-258" y="24"/>
         </scene>
     </scenes>
 </document>
